# vasp-core-benchmarking

./: README.md  pushing_to_github.sh  pyproject.toml
src/vasp_core_benchmarking/: __init__.py  clean.py  cli.py  core_ranges.py  generate.py  options_file.py  outcar.py  report.py  sacct.py  status.py  submit.py
